<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/daily_check_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/daily_checkin" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/daily_checkin"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/silverCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/silver_scratch" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/silver_scratch"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/platinumCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/platinum_scratch" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/platinum_scratch"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/goldCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/gold_scratch" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/gold_scratch"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/walletCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/wallet" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/menu_my_wallet"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/refer_cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/refer_and_earn" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/refer_more"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>